Switched to update loop